--- a/styles/common.css
+++ b/styles/common.css
@@ -1,17 +1,95 @@
 @font-face{
-    font-family: myFancyFont;
-    src: url('ProggySquare.ttf');
+	font-family: myFancyFont;
+	src:url('https://fonts.googleapis.com/css?family=Press+Start+2P');
+	src: url('ProggySquare.ttf');
 }
 
 *{
-    font-family: 'myFancyFont';
-    font-size: 19px;
-    background-color:black;
-    color:white;
+	font-family: 'myFancyFont';
+	font-size: 19px;
+	background-color:black;
+	color:white;
 }
 
-nav{
-    margin-bottom:25px;    
-    margin-top:25px;    
+.main-frame {
+	display: flex;
+	flex-direction: row-reverse;
+}
+
+.game-editor{
+	width:75vw;
+	padding:20px;
+}
+
+.game-properties{
+	width:25vw;
+	padding:20px;
+}
+
+
+h4{
+	display:inline;
+}
+
+
+label,input{
+	display:inline;
+}
+
+input{
+	border:1px solid white;
+	margin-right: 10px;
+}
+
+.parameters{
+	display:inline;
+}
+
+.save-button{
+	display:block;
+	float:right;
+	border:1px solid purple;
+	background-color:black;
+}
+
+h3{
+	font-size: 21px;
+	background-color:darkgrey;
+	color:black;
+	padding-top:5px;
+	margin-bottom:10px;
+	padding-left:5px;
+}
+
+.check{
+	position: absolute;
+	cursor: pointer;
+	right: -18px;
+	top: -4px;
+	opacity:0;
+}
+
+.character-input{
+	width:30px;
+	padding-left:10px;
+}
+
+.checkmark {
+	position: absolute;
+	height: 13px;
+	width: 13px;
+	background-color: black;
+	border:1px solid white;
+}
+
+.check-container{
+	position:relative;
+	display:inline;
+	margin-left: 2px;
+	margin-right:30px;
+}
+
+.check-container:hover > .checkmark {
+	background-color: white;
 }
 
