--- a/styles/common.css
+++ b/styles/common.css
@@ -4,6 +4,11 @@
 	src: url('ProggySquare.ttf');
 }
 
+.header-image{
+	display:block;
+	margin:auto;
+}
+
 *{
 	font-family: 'myFancyFont';
 	font-size: 19px;
@@ -93,3 +98,6 @@ h3{
 	background-color: white;
 }
 
+.input-number{
+	width:20px;
+}
